--- a/app/views/components/index.html.erb
+++ b/app/views/components/index.html.erb
@@ -1,2 +1,2 @@
-<h1>Components#index</h1>
-<p>Find me in app/views/components/index.html.erb</p>
+1<h1>Components#index</h1>
+2<div id="root"></div>
